--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,7 +4,7 @@ description: Eureka is a elegant and powerful theme for Hugo.
 
 repoEditURL:
 
-dateFormat:
+dateFormat: YYYY-MM-DD HH:MM:SS +/-TTTT
 
 titleSeparator:
 
