--- a/config/_default/social.toml
+++ b/config/_default/social.toml
@@ -1,27 +1,7 @@
-email = "user@domain.tld"
-facebook = "yourfacebookusername"
-github = "yourgithubusername"
-gitlab = "yourgitlabusername"
-linkedin = "yourlinkedinusername"
-stackoverflow = "yourstackoverflowuserid"
-twitter = "yourtwitterusername"
-weibo = "yourweibousername"
-zhihu = "yourzhihuusername"
-instagram = "yourinstagramusername"
-quora = "yourquorausername"
-tumblr = "yourtumblrusername"
-reddit = "yourredditusername"
-telegram = "yourtelegramusername"
-qq = "yourqqnumber"
-dockerhub = "yourdockerhubusername"
-bitbucket = "yourbitbucketworkspaceid"
-kaggle = "yourkaggleusername"
-medium = "yourmediumusername" # Medium username or custom domain(e.g. https://custom.domain.tld).
-lastfm = "yourlastfmusername"
-bilibili = "yourbilibiliuserid"
-youtube = "youryoutubechannelid"
-discord = "yourdiscordinvitecode"
-discourse = "https://yourforum.tld"
-facebookgroup = "yourfacebookgroupname"
-tiktok = "yourtiktokusername"
-pinterest = "yourpinterestusername"
+github = "ravihara"
+linkedin = "raviharanath"
+stackoverflow = "4382147"
+twitter = "ahikrv"
+quora = "Ravishankar-Haranath"
+dockerhub = "ravihara"
+discord = "866009817649774634"
