--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,35 +1,14 @@
 [en]
-  languageName = "English"
-  weight = 1
-  contentDir = "content/en"
+languageName = "English"
+weight = 1
+contentDir = "content/en"
 
-[fr]
-  languageName = "Français"
-  weight = 2
-  contentDir = "content/fr"
-  [fr.params]
-    dateFormat = "02-01-2006"
-    description = "Un thème de blog extrêmement rapide, réactif et riche en fonctionnalités pour Hugo"
-    keywords = "Hugo, Bootstrap, Thème Blog"
+[kn]
+languageName = "ಕನ್ನಡ"
+weight = 2
+contentDir = "content/kn"
 
-[zh-cn]
-  languageName = "简体中文"
-  weight = 4
-  contentDir = "content/zh-cn"
-  [zh-cn.params]
-    dateFormat = "2006-01-02"
-    description = "一个快速、响应式和功能丰富的 Hugo 博客主题"
-    keywords = "Hugo, Bootstrap, 博客主题"
-    [zh-cn.params.archive]
-      dateFormat = "01-02"
-
-[zh-tw]
-  languageName = "繁體中文"
-  weight = 3
-  contentDir = "content/zh-tw"
-  [zh-tw.params]
-    dateFormat = "2006-01-02"
-    description = "一個快速、響應式和功能豐富的 Hugo 博客主題"
-    keywords = "Hugo, Bootstrap, 博客主題"
-    [zh-tw.params.archive]
-      dateFormat = "01-02"
+[kn.params]
+dateFormat = "21-10-2021"
+description = "ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"
+keywords = "Hugo, Bootstrap, Thème Blog"
