--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -1,23 +1,23 @@
 [[main]]
-  name = "Repository"
-  identifier = "Repository"
+  name = "Github"
+  identifier = "repository"
   pre = '<i class="fab fa-fw fa-github"></i>'
-  url = "https://github.com/razonyang/hugo-theme-bootstrap"
+  url = "https://github.com/ravihara"
   weight = 99
 [[main]]
-  name = "Demo Sites"
-  identifier = "demo"
+  name = "Networks"
+  identifier = "networks"
   pre = '<i class="fas fa-fw fa-chevron-circle-down"></i>'
   weight = 100
 [[main]]
-  id = "github"
-  parent = "demo"
-  name = "Netlify"
+  id = "linkedin"
+  parent = "networks"
+  name = "LinkedIn"
   weight = 1
-  url = "https://hbs.razonyang.com"
+  url = "https://linkedin.com/in/raviharanath/"
 [[main]]
-  id = "china"
-  parent = "demo"
-  name = "China"
+  id = "twitter"
+  parent = "networks"
+  name = "Twitter"
   weight = 2
-  url = "https://hbs-cn.razonyang.com"
+  url = "https://twitter.com/ahikrv"
