--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -46,10 +46,8 @@ taxonomyPaginate = 5 # Default to 10.
 # taxonomyPostCount = 5 # The number of posts of taxonomy. Turn off by setting it to false.
 
 # Custom CSS and JS
-customCSS = [
-]
-customJS = [
-]
+customCSS = []
+customJS = []
 
 # tocWordCount = 280 # TOC is displayed only if the post's word count exceeds this value.
 
@@ -58,69 +56,69 @@ titleCase = true # Capitalized title.
 viewer = true # Image Viewer
 
 [codeBlock]
-  # maxLines = 8
-  lineNos = false # true/false represents that show/hide the line numbers by default.
+# maxLines = 8
+lineNos = false # true/false represents that show/hide the line numbers by default.
 
 [post]
-  # excerpt = "description"
-  # excerptMaxLength = 120
+# excerpt = "description"
+# excerptMaxLength = 120
 
 [archive]
-  paginate = 8 # Archive pagination. Default to 100.
-  # dateFormat = "01-02" # Archive date format. Default to "Jan 2".
+paginate = 8 # Archive pagination. Default to 100.
+# dateFormat = "01-02" # Archive date format. Default to "Jan 2".
 
 [analytics]
-  # baidu = "" # Baidu Analytics
+# baidu = "" # Baidu Analytics
 
 # Site verification
 [siteVerification]
-  google = ""
-  bing = ""
-  baidu = ""
-  baiduUnion = "" # Baidu Union
-  so = ""
-  sogou = ""
-  shenma = ""
+google = ""
+bing = ""
+baidu = ""
+baiduUnion = "" # Baidu Union
+so = ""
+sogou = ""
+shenma = ""
 
 [creativeCommons]
-  # by = true # Credit must be given to you, the creator.
-  # nc = true # Only noncommercial use of your work is permitted.
-  # nd = true # No derivatives or adaptations of your work are permitted.
-  # sa = true # Adaptations must be shared under the same terms.
+# by = true # Credit must be given to you, the creator.
+# nc = true # Only noncommercial use of your work is permitted.
+# nd = true # No derivatives or adaptations of your work are permitted.
+# sa = true # Adaptations must be shared under the same terms.
 
 [utterances]
-  repo = "razonyang/hugo-theme-bootstrap-comments" # Replace with your repository.
-  #issueTerm = "pathname" # pathname, url, title, og:title
-  #label = "comment"
-  # By default, light and dark mode correspond to github-light and github-dark, respectively.
-  # Optional values: github-light, github-dark, preferred-color-scheme, github-dark-orange, icy-dark, dark-blue, photon-dark.
-  #theme = "" 
+repo = "ravihara/ravihara-blog-comments" # Replace with your repository.
+#issueTerm = "pathname" # pathname, url, title, og:title
+#label = "comment"
+# By default, light and dark mode correspond to github-light and github-dark, respectively.
+# Optional values: github-light, github-dark, preferred-color-scheme, github-dark-orange, icy-dark, dark-blue, photon-dark.
+#theme = ""
 
 [search]
-  paginate = 5 # Pagination. Default to 10.
-  # resultContentWordCount = 240 # The maximum word count of result content for displaying.
-  # Fuse.js options. See https://fusejs.io/api/options.html.
-  [search.fuse]
-    # ignoreLocation = true
-    # location = 0
-    # isCaseSensitive = false
-    # minMatchCharLength = 1
-    threshold = 0.1
-    # distance = 100
-    # useExtendedSearch = true
+paginate = 5 # Pagination. Default to 10.
+# resultContentWordCount = 240 # The maximum word count of result content for displaying.
+# Fuse.js options. See https://fusejs.io/api/options.html.
+[search.fuse]
+# ignoreLocation = true
+# location = 0
+# isCaseSensitive = false
+# minMatchCharLength = 1
+threshold = 0.1
+# distance = 100
+# useExtendedSearch = true
 
 [reward]
-  alipay = "images/reward/alipay.png"
-  wechat = "images/reward/wechat.png"
-  #paypal = "images/reward/paypal.png"
-  #patreon = "images/reward/patreon.png"
-  #liberapay = "images/reward/liberapay.png"
+alipay = "images/reward/alipay.png"
+wechat = "images/reward/wechat.png"
+#paypal = "images/reward/paypal.png"
+#patreon = "images/reward/patreon.png"
+#liberapay = "images/reward/liberapay.png"
 
 #[share]
-  #addThis = "" # AddThis pubid.
+#addThis = "" # AddThis pubid.
 
 [fontSize] # Comment or remove this settings to disable font size switcher.
-  # extraSmall = ".8rem"
-  # small = ".9rem"
-  # large = "1.1rem"
-  # extraLarge = "1.2rem"
+# extraSmall = ".8rem"
+# small = ".9rem"
+# large = "1.1rem"
+# extraLarge = "1.2rem"
