--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,8 +86,8 @@ shenma = ""
 # nd = true # No derivatives or adaptations of your work are permitted.
 # sa = true # Adaptations must be shared under the same terms.
 
-[utterances]
-repo = "ravihara/ravihara-blog-comments" # Replace with your repository.
+# [utterances]
+# repo = "ravihara/ravihara-blog-comments" # Replace with your repository.
 #issueTerm = "pathname" # pathname, url, title, og:title
 #label = "comment"
 # By default, light and dark mode correspond to github-light and github-dark, respectively.
