java points in progress

--- a/config/_default/author.toml
+++ b/config/_default/author.toml
@@ -1,6 +1,6 @@
 name = "Ravishankar Haranath"
 avatar = "images/profile.png"                              # Avatar image. Default to "images/profile.webp".
-bio = "Ubuntu, Golang, JS/Node, Java-SE, Cloud and DevOps"
+bio = "Ubuntu, RHEL, JS/Node, Java-SE, Golang, Cloud and DevOps"
 company = "Business with FOSS"
 location = "Bengaluru"
 
