Updated Google analytics UA identifier

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,7 +17,7 @@ disqusShortname = "www-ravihara-in"
 
 # Google analytics
 # googleAnalytics = "UA-123-45"
-googleAnalytics = "G-4HKE7YS2EG"
+googleAnalytics = "UA-212816023-1"
 
 enableRobotsTXT = true
 
