Updated blog title

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://www.ravihara.in"
-title = "While I remember"
+title = "Ravi-Hara"
 theme = "hugo-theme-bootstrap"
 copyright = "Copyright © 2021-{year} Ravishankar Haranath. All Rights Reserved."
 
