--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -107,9 +107,9 @@ threshold = 0.1
 # distance = 100
 # useExtendedSearch = true
 
-[reward]
-alipay = "images/reward/alipay.png"
-wechat = "images/reward/wechat.png"
+#[reward]
+#alipay = "images/reward/alipay.png"
+#wechat = "images/reward/wechat.png"
 #paypal = "images/reward/paypal.png"
 #patreon = "images/reward/patreon.png"
 #liberapay = "images/reward/liberapay.png"
