Fixed LinkedIn profile in footer

--- a/config/_default/social.toml
+++ b/config/_default/social.toml
@@ -1,5 +1,5 @@
 github = "ravihara"
-linkedin = "in/raviharanath"
+linkedin = "raviharanath"
 stackoverflow = "4382147"
 twitter = "ahikrv"
 quora = "Ravishankar-Haranath"
